--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ numpy = "1.26.4"
 open3d = "^0.18.0"
 tqdm = "^4.66.4"
 opencv-python = "^4.10.0.84"
+click = "^8.1.7"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.10"
