--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ open3d = "^0.18.0"
 tqdm = "^4.66.4"
 opencv-python = "^4.10.0.84"
 click = "^8.1.7"
+rich = "^13.7.1"
+rich-click = "^1.8.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.10"
