--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ readme = "README.md"
 python = "^3.10"
 numpy = "1.26.4"
 open3d = "^0.18.0"
-tqdm = "^4.66.4"
 opencv-python = "^4.10.0.84"
 click = "^8.1.7"
 rich = "^13.7.1"
@@ -18,6 +17,7 @@ rich-click = "^1.8.3"
 torch = { version = "^2.3.1+cu121", source = "pytorch-cuda" }
 torchvision = { version = "^0.18.1+cu121", source = "pytorch-cuda" }
 torchaudio = { version = "^2.3.1+cu121", source = "pytorch-cuda" }
+ffmpeg-python = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.10"
